Fix the bug the hamburger and still  align all items in Header

--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -7,15 +7,13 @@
   margin: 0 auto;
   width: 100%;
   display: flex;
+  height: 70px;
 }
 
 .header_wrapper {
   width: 100%;
   max-width: var(--max-width);
   margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .header nav {
@@ -50,7 +48,7 @@
   float: left;
   font-size: 24px;
   font-weight: 800;
-  padding: 10px 20px;
+  padding: 20px 20px;
   text-decoration: none;
 }
 
